--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 
 project(computer_enhance)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 add_subdirectory("perfaware/part1")
